fix header on mobile in impressum etc

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -50,7 +50,7 @@
 @media only screen and (max-width: 768px) {
     .container {
         // Set up the container for the site content
-        grid-template-rows: 80px 811px auto auto;
+        grid-template-rows: 0px 811px auto auto;
     }
 }
 
